# sound-engineering

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .periphery.yml  .semgrep.yml  .semgrepignore  .swiftformat  .swiftlint.yml  BRAND-INTEGRATION-PLAN.md  CODE-REVIEW-FIXING-PLAN.md  DEVELOPMENT.md  HANDOFF.md  KICKOFF-AGENDA.md  Makefile  PHASE0-DSP-ENGINEER-SPRINT.md  PHASE0-QA-SPRINT.md  PHASE0-REFACTOR-SPRINT.md  PHASE0-SWIFTUI-SPRINT.md  Package.resolved  Package.swift  README.md  TEAM-FIXING-PLAN-SYNTHESIS.md  TEAM-FIXING-PLAN.md  build-app.sh  convert-icon.sh
.githooks/: pre-commit
.github/: dependabot.yml
Tests/: .clang-tidy  CrossfeedTests.inc  DSPKernelNullTest.cpp  DspBypassTests.inc  EQModuleCoefficientsTests  EQModuleCoefficientsTests.cpp  EQSafetyClampTest.swift  EQTests.swift  EqFrequencyResponseSweepTests.inc  EqTests.inc  FileDecodeB2bTests.inc  FileDecodeTests.inc  GaplessContractTests.inc  GaplessTests.inc  HandleLeakHarness.mm  IntensityTests.inc  LimiterTests.inc  LimiterTruePeakTests.inc  (+12 more)
research/legacy-remaster-poc/: .gitignore  README.md  pyproject.toml  requirements.txt
research/legacy-remaster-poc/bwe/: README.md
research/legacy-remaster-poc/data/: README.md
research/legacy-remaster-poc/remaster/: __init__.py  __main__.py  analyze.py  audioio.py  bakeoff.py  bwe_classical.py  cli.py  dehiss.py  dsp.py  loudness.py  match_eq.py  pipeline.py  sim.py  synth.py  verify.py  width.py
research/legacy-remaster-poc/tests/: test_cli.py  test_dsp.py  test_fixes.py  test_io_formats.py  test_layers.py  test_pipeline.py  test_sim.py
(+560 files in other folders)
